--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-phone-number-input": "^3.4.14",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
