--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.4.6",
     "node-appwrite": "^21.1.0",
     "react": "19.2.3",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-phone-number-input": "^3.4.14",
