--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.2.3",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.71.1",
     "react-phone-number-input": "^3.4.14",
     "tailwind-merge": "^3.4.0"
